Fix layout shift on mount

--- a/src/components/Input/chatinput.module.scss
+++ b/src/components/Input/chatinput.module.scss
@@ -15,6 +15,7 @@
   border-radius: 20px;
   width: 100%;
   animation: fadeIn 400ms forwards;
+  overflow: visible;
   
   &.active {
     margin-bottom: 20px;
@@ -61,6 +62,8 @@
   display: flex;
   gap: 4px;
   align-items: center;
+
+  
 }
 
 .empty {
